--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<!--====== Header Section Start ======-->
 	<header class="header-section">
 		<div class="logo">
-			<a href="index.html"><img src="img/designeryusuf-yusuf-odukoya.png" alt="" height="66px;"></a><!-- Logo -->
+			<a href="index.html"><img src="img/logo2.png" alt="" height="66px;"></a><!-- Logo -->
 		</div>
 		<!-- <div class="responsive"><i class="fa fa-bars"></i></div>-->
 		<!-- Navigation -->
@@ -54,7 +54,7 @@
 			<div class="intro-content">
 				<div id="round"></div>
 				<div class="profile-img">
-					<img src="img/Yusuf-Odukoya-Avatar.jpg" alt="Yusuf Odukoya, Graphic Designer">
+					<img src="img/scofield.jpg" alt="Scofield, Cloud Computing">
 				</div>
 				<h2><span class="element"></span></h2> <br>
 				<a href="files/scofield-Idehen.pdf" class="site-btn mt10"> Download CV </a> &emsp; <a href="#portfolio"
