--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<!--====== Header Section Start ======-->
 	<header class="header-section">
 		<div class="logo">
-			<a href="index.html"><img src="img/logo2.png" alt="" height="66px;"></a><!-- Logo -->
+			<a href="index.html"><img src="scofield.JPG" alt="" height="66px;"></a><!-- Logo -->
 		</div>
 		<!-- <div class="responsive"><i class="fa fa-bars"></i></div>-->
 		<!-- Navigation -->
