--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 					<div class="col-md-5 skill">
 						<div>
-							<img class="workimg" src="img/Yusuf-Odukoya-At-Work.jpg" alt="Yusuf Odukoya">
+							<img class="workimg" src="img/Yusuf-Odukoya-at-Work.jpg" alt="Scofield Idehen">
 						</div>
 						<br>
 						<!-- Skill item -->
