--- a/index.html
+++ b/index.html
@@ -81,38 +81,30 @@
 				<div class="row">
 					<div class="col-md-7 about-text">
 						<h2> <span id="story-heading"></span></h2>
-						<p><b>Scofield Idehen</b> is a seasoned all round IT Consultant and developer,
-							he has demonstrated a high level of creativity and determination towards developing critical
-							skills that are pivotal to his growth. </p>
 
-						<p>He graduated from the University of Benin as a diplomat but released his true love was in
-							the IT, he started his IT career in Hardware maintenance and repair where he learnt how
-							to solve complex issue surrounding system hardware and software. </p>
+							<p><b>Scofield Idehen<b>, a talented IT consultant and developer with a passion for 
+							tackling complex problems and continually improving his skills.</p>
 
-						<p>He dived deeper into full development of codes after one of the systems he was working on
-							was attacked by a ransom-ware, it was the door that open his mind towards cyber-security
-							and he gained his CISSIP certificate from ICSI (International Cyber security Institute).
-						</p>
+							<p>After earning his degree in diplomacy from the University of Benin, Scofield discovered his true calling in the field of IT. 
+							He began his career by learning how to repair and maintain hardware and software systems, and eventually gained expertise in cyber security 
+							after a ransomware attack inspired him to earn his CISSIP certification from the International Cyber Security Institute.</P
 
-						<p>Searching for more he decided to specialized on using cloud technology as most company
-							infrastructure, have moved to cloud, he was able to demonstrate key knowledge in using
-							GCP and Azure cloud service</p>
 
-						<p>He became more critical that he understands the technology behind blockchain and how it
-							works, he picked up the technical knowledge on developing smart contract using Solidity
-							and implementing such technology using a ReactJS front-end. </p>
+						<p>Scofield also specializes in cloud technology, demonstrating a strong understanding of both Google Cloud Platform and Microsoft Azure. 
+							But his thirst for knowledge didn't stop there. He became fascinated with blockchain and solidity, and 
+							even developed his own smart contracts using ReactJS.<p>
 
-						<p>Each learning process enabled Scofield to use his knowledge to help <a
-								href="http://linkorion.com" target="_blank" rel="noopener noreferrer">LinkOrion
-								Technology,</a>
-							leverage on becoming more aligned with world best practice.</p>
+						<p>In addition to using his skills to help his company, LinkOrion Technology, stay ahead of the curve, 
+							Scofield also spends a lot of time working on open-source projects and training others.</p> 
 
-						<p>Scofield spends most of his time on Open-source projects, solving issues and training younger
-							people develop skills </p>
+							<p>He is an avid writer, with many of his articles 
+							published on <a
+														href="http://medium.com/scofield-Idehen" target="_blank"
+														rel="noopener noreferrer">Medium</a></p>
+						. Overall, Scofield is a dedicated and multifaceted professional who is always looking for 
+								new challenges and opportunities to grow.</p>
 
-						<p>He enjoys writing as most of his write up can be found <a
-								href="http://medium.com/scofield-Idehen" target="_blank"
-								rel="noopener noreferrer">here.</a></p>
+
 
 						</p>
 						<p>
