--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<img src="img/scofield.JPG" alt="Scofield, Cloud Computing">
 				</div>
 				<h2><span class="element"></span></h2> <br>
-				<a href="files/scofield-Idehen.pdf" class="site-btn mt10"> Download CV </a> &emsp; <a href="#portfolio"
+				<a href="files/Resume-Scofield-Idehen (1).pdf" class="site-btn mt10"> Download CV </a> &emsp; <a href="#portfolio"
 					class="site-btn mt10"> Portfolio</a>
 				<br> <br>
 				<a class="site-btnsocialf" id="facebook" href="https://web.facebook.com/scofhunter"><i
