--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 
 							<p>After earning his degree in diplomacy from the University of Benin, Scofield discovered his true calling in the field of IT. 
 							He began his career by learning how to repair and maintain hardware and software systems, and eventually gained expertise in cyber security 
-							after a ransomware attack inspired him to earn his CISSIP certification from the International Cyber Security Institute.</P
+							after a ransomware attack inspired him to earn his CISSIP certification from the International Cyber Security Institute.</p>
 
 
 						<p>Scofield also specializes in cloud technology, demonstrating a strong understanding of both Google Cloud Platform and Microsoft Azure. 
 							But his thirst for knowledge didn't stop there. He became fascinated with blockchain and solidity, and 
-							even developed his own smart contracts using ReactJS.<p>
+							even developed his own smart contracts using ReactJS.</p>
 
 						<p>In addition to using his skills to help his company, LinkOrion Technology, stay ahead of the curve, 
 							Scofield also spends a lot of time working on open-source projects and training others.</p> 
