--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							published on <a
 														href="http://medium.com/scofield-Idehen" target="_blank"
 														rel="noopener noreferrer">Medium</a></p>
-						. Overall, Scofield is a dedicated and multifaceted professional who is always looking for 
+						<p>Overall, Scofield is a dedicated and multifaceted professional who is always looking for 
 								new challenges and opportunities to grow.</p>
 
 
