Review my profile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<img src="img/scofield.JPG" alt="Scofield, Cloud Computing">
 				</div>
 				<h2><span class="element"></span></h2> <br>
-				<a href="files/Resume-Scofield-Idehen (1).pdf" class="site-btn mt10"> Download CV </a> &emsp; <a href="#portfolio"
+				<a href="files/Scofield Idehen Resume (1).pdf" class="site-btn mt10"> Download CV </a> &emsp; <a href="#portfolio"
 					class="site-btn mt10"> Portfolio</a>
 				<br> <br>
 				<a class="site-btnsocialf" id="facebook" href="https://web.facebook.com/scofhunter"><i
@@ -82,7 +82,7 @@
 					<div class="col-md-7 about-text">
 						<h2> <span id="story-heading"></span></h2>
 
-							<p><b>Scofield Idehen<b>, a talented IT consultant and developer with a passion for 
+							<p><b>Scofield Idehen<b>, a talented IT consultant and Full stack developer with a passion for 
 							tackling complex problems and continually improving his skills.</p>
 
 							<p>After earning his degree in diplomacy from the University of Benin, Scofield discovered his true calling in the field of IT. 
