--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<!-- <p> <b> I had decided to go back to being a full-time freelancer as I came to dislike that 8 a.m - 5 p.m thingy.</b> </p>-->
 						</p>
 
-						<a target="blank" href="Resume-Scofield-Idehen (1).pdf" class="site-btn mt10">Download
+						<a target="blank" href="Scofield Idehen Resume (1).pdf" class="site-btn mt10">Download
 							Resume </a>
 					</div>
 
