--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
 							others, it’s a program that allows for collaboration and togetherness in building and
 							self-developing. </p>
 
+						<p> AS a mentor for ALX cohort 19 and MTN girls Enterpreneur project, he aided and guided his mentee to 
+							success.
+
+							Scofield is also a Certified Blockchain Developer. 
+		
+						</p>
+
 						<!--- <p>My first full-time work experience was at <a href="http://ellaecreative.com"> Ellae Creative Agency. </a> My career saw a critical transformation  ----->
 
 						<!-- <p> <b> I had decided to go back to being a full-time freelancer as I came to dislike that 8 a.m - 5 p.m thingy.</b> </p>-->
