--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<!-- <p> <b> I had decided to go back to being a full-time freelancer as I came to dislike that 8 a.m - 5 p.m thingy.</b> </p>-->
 						</p>
 
-						<a target="blank" href="Scofield_Idehen.pdf" class="site-btn mt10">Download
+						<a target="blank" href="files/Scofield_Idehen.pdf" class="site-btn mt10">Download
 							Resume </a>
 					</div>
 
